Added assets & improvements
Added favicon & logo, added description for Artemis II, and slight style changes.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artemis II Visualization - NASA ADC</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +14,10 @@
     />
   </head>
   <body>
-    <div class="heading">Artemis II Visualization - NASA ADC</div>
+    <div class="heading">
+      <img src="favicon.png" class="title-logo" /> Artemis II Visualization -
+      NASA ADC
+    </div>
     <div class="data">
       <span class="item">Trajectory stuff</span>
       <span class="item">Speed stuff</span>
@@ -32,10 +36,7 @@
     </div>
     <p class="black-text">
       <b>Artemis II</b>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic earum minus
-      dolores nulla nihil? Itaque eaque accusamus perspiciatis autem, laborum
-      dolorem, asperiores esse soluta maiores neque, quis voluptas delectus
-      vitae?
+      is a very skibidi toilet gyatt rizzler who will touch ur mom.
     </p>
     <script src="app.js"></script>
   </body>
