Finished uploading everything!!!

--- a/index.html
+++ b/index.html
@@ -32,11 +32,18 @@
       <button id="btn">Enter Fullscreen</button>
     </div>
     <div class="graph">
+      <iframe 
+        src="nasa-build" 
+        width="960" 
+        height="600" 
+        frameborder="0" 
+        allowfullscreen>
+    </iframe>
       <img src="rocket.png" class="rocket" />
     </div>
     <p class="black-text">
       <b>Artemis II</b>
-      is a very skibidi toilet gyatt rizzler who will touch ur mom.
+      The Artemis II mission is a major jump for NASA. It's because it will help NASA prepare for future missions on the moon.
     </p>
     <script src="app.js"></script>
   </body>
